# py-refman

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml  refman.pyi
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_bindings.py
