[package]
name = "py-refman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_refman"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
pyo3 = "0.19.0"
refman = "1.0.1"
tokio = { version = "1.9.0", features = ["full"] }

